[package]
name = "lotr"
version = "0.1.4"
edition = "2021"
resolver = "2"

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
ureq = { version = "2.4.0", features = ["json", "charset"] }
sled = "0.34.7"
clap = "3.2.21"
rpassword = "0.0.4"
base64 = "0.13.0"
hex = "0.4.3"
secp256k1 = {version = "0.22.0", features = ["rand", "bitcoin_hashes", "global-context", "rand-std"]}
bitcoin = {version = "0.28.1", features = ["rand", "base64"]}
bdk = { version = "0.21.0", features = ["compiler", "rpc", "electrum", "sqlite"] }
bip39 = "1.0.1"
chacha20poly1305 = {version = "0.9.0", features = ["stream"]}
sha2 = "0.10.5"
bincode = "1.3.3"
text_io = "0.1.12"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
http = "0.2.8"
openssl = { version = "0.10", features = ["vendored"] }
qrcode = { version = "0.12" }
